// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomeSearch handles a capitalized name correctly 1`] = `
<DocumentFragment>
  <div
    class="modal-container relative"
  >
    <div
      class="flex flex-col w-full max-w-[800px] h-[200px] absolute mx-0 top-[240px]"
    >
      <div
        class="flex flex-col w-full h-full"
      >
        <div
          class="min-h-[50px]"
          data-testid="home-search-spacer-header"
          style=""
        />
        <div
          class="flex flex-col w-full rounded-[4px] bg-foreground border-[1px] border-error"
        >
          <div
            class="flex flex-row w-full p-2 pr-[100px] relative gap-2"
          >
            <input
              class="flex w-full pl-4 h-[50px] bg-foreground focus:outline-none placeholder:text-grey text-[14px] text-white text-lg"
              data-testid="domain-search-input"
              placeholder="Search for a name"
              type="text"
              value="ardrive"
            />
            <button
              class="flex flex-row items-center justify-center absolute right-0 top-0 h-full max-w-[65px]"
              data-testid="domain-search-button"
            >
              <svg
                class="lucide lucide-x fill-white text-white"
                fill="none"
                height="18px"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="18px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 6 6 18"
                />
                <path
                  d="m6 6 12 12"
                />
              </svg>
            </button>
          </div>
          <div
            class="flex flex-col w-full p-6 pt-4 border-t-[1px] border-dark-grey"
            data-testid="home-search-child-container"
          >
            <div
              class="flex flew-row w-full justify-between"
            >
              <span
                class="text-grey text-sm"
              >
                <span
                  class="whitespace-nowrap flex items-center gap-2"
                >
                  NOT AVAILABLE
                  <span
                    aria-label="info-circle"
                    class="anticon anticon-info-circle fill-grey pointer"
                    height="14px"
                    role="img"
                    width="14px"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="info-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                      />
                      <path
                        d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                      />
                    </svg>
                  </span>
                </span>
              </span>
            </div>
            <div
              class="flex flex-row w-full justify-between mt-4"
            >
              <span
                class="text-xl text-grey"
              >
                ardrive.ar-io.dev
              </span>
              <button
                class="text-[12px] text-white whitespace-nowrap flex items-center"
                style="gap: 0;"
              >
                View Details 
                <svg
                  class="lucide lucide-chevron-right"
                  fill="none"
                  height="18px"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="18px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="flex flex-row w-full mt-2 justify-center items-center max-w-[775px]"
          style="row-gap: 4px;"
        >
          <span
            class="flex flex-row justify-center items-center whitespace-nowrap text-sm  text-white"
            style="gap: 5px;"
          >
            <div
              fill="var(--success-green)"
              height="14px"
              width="14px"
            />
             Max. 51 characters
          </span>
          <span
            class="flex flex-row justify-center items-center whitespace-nowrap text-sm  text-white"
            style="gap: 5px;"
          >
            <div
              fill="var(--success-green)"
              height="14px"
              width="14px"
            />
             No special characters or underscores
          </span>
          <span
            class="flex flex-row justify-center items-center whitespace-nowrap text-sm  text-white"
            style="gap: 5px;"
          >
            <div
              fill="var(--success-green)"
              height="14px"
              width="14px"
            />
             Dashes cannot be leading or trailing
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HomeSearch handles a emoji name correctly 1`] = `
<DocumentFragment>
  <div
    class="modal-container relative"
  >
    <div
      class="flex flex-col w-full max-w-[800px] h-[200px] absolute mx-0 top-[240px]"
    >
      <div
        class="flex flex-col w-full h-full"
      >
        <div
          class="min-h-[50px]"
          data-testid="home-search-spacer-header"
          style=""
        />
        <div
          class="flex flex-col w-full rounded-[4px] bg-foreground border-[1px] border-error"
        >
          <div
            class="flex flex-row w-full p-2 pr-[100px] relative gap-2"
          >
            <input
              class="flex w-full pl-4 h-[50px] bg-foreground focus:outline-none placeholder:text-grey text-[14px] text-white text-lg"
              data-testid="domain-search-input"
              placeholder="Search for a name"
              type="text"
              value="🐘🕸"
            />
            <button
              class="flex flex-row items-center justify-center absolute right-0 top-0 h-full max-w-[65px]"
              data-testid="domain-search-button"
            >
              <svg
                class="lucide lucide-x fill-white text-white"
                fill="none"
                height="18px"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="18px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 6 6 18"
                />
                <path
                  d="m6 6 12 12"
                />
              </svg>
            </button>
          </div>
          <div
            class="flex flex-col w-full p-6 pt-4 border-t-[1px] border-dark-grey"
            data-testid="home-search-child-container"
          >
            <div
              class="flex flew-row w-full justify-between"
            >
              <span
                class="text-grey text-sm"
              >
                <span
                  class="whitespace-nowrap flex items-center gap-2"
                >
                  NOT AVAILABLE
                  <span
                    aria-label="info-circle"
                    class="anticon anticon-info-circle fill-grey pointer"
                    height="14px"
                    role="img"
                    width="14px"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="info-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                      />
                      <path
                        d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                      />
                    </svg>
                  </span>
                </span>
              </span>
            </div>
            <div
              class="flex flex-row w-full justify-between mt-4"
            >
              <span
                class="text-xl text-grey"
              >
                🐘🕸.ar-io.dev
              </span>
              <button
                class="text-[12px] text-white whitespace-nowrap flex items-center"
                style="gap: 0;"
              >
                View Details 
                <svg
                  class="lucide lucide-chevron-right"
                  fill="none"
                  height="18px"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="18px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="flex flex-row w-full mt-2 justify-center items-center max-w-[775px]"
          style="row-gap: 4px;"
        >
          <span
            class="flex flex-row justify-center items-center whitespace-nowrap text-sm  text-white"
            style="gap: 5px;"
          >
            <div
              fill="var(--success-green)"
              height="14px"
              width="14px"
            />
             Max. 51 characters
          </span>
          <span
            class="flex flex-row justify-center items-center whitespace-nowrap text-sm  text-white"
            style="gap: 5px;"
          >
            <div
              fill="var(--success-green)"
              height="14px"
              width="14px"
            />
             No special characters or underscores
          </span>
          <span
            class="flex flex-row justify-center items-center whitespace-nowrap text-sm  text-white"
            style="gap: 5px;"
          >
            <div
              fill="var(--success-green)"
              height="14px"
              width="14px"
            />
             Dashes cannot be leading or trailing
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HomeSearch handles a lowercase name correctly 1`] = `
<DocumentFragment>
  <div
    class="modal-container relative"
  >
    <div
      class="flex flex-col w-full max-w-[800px] h-[200px] absolute mx-0 top-[240px]"
    >
      <div
        class="flex flex-col w-full h-full"
      >
        <div
          class="min-h-[50px]"
          data-testid="home-search-spacer-header"
          style=""
        />
        <div
          class="flex flex-col w-full rounded-[4px] bg-foreground border-[1px] border-error"
        >
          <div
            class="flex flex-row w-full p-2 pr-[100px] relative gap-2"
          >
            <input
              class="flex w-full pl-4 h-[50px] bg-foreground focus:outline-none placeholder:text-grey text-[14px] text-white text-lg"
              data-testid="domain-search-input"
              placeholder="Search for a name"
              type="text"
              value="ardrive"
            />
            <button
              class="flex flex-row items-center justify-center absolute right-0 top-0 h-full max-w-[65px]"
              data-testid="domain-search-button"
            >
              <svg
                class="lucide lucide-x fill-white text-white"
                fill="none"
                height="18px"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="18px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 6 6 18"
                />
                <path
                  d="m6 6 12 12"
                />
              </svg>
            </button>
          </div>
          <div
            class="flex flex-col w-full p-6 pt-4 border-t-[1px] border-dark-grey"
            data-testid="home-search-child-container"
          >
            <div
              class="flex flew-row w-full justify-between"
            >
              <span
                class="text-grey text-sm"
              >
                <span
                  class="whitespace-nowrap flex items-center gap-2"
                >
                  NOT AVAILABLE
                  <span
                    aria-label="info-circle"
                    class="anticon anticon-info-circle fill-grey pointer"
                    height="14px"
                    role="img"
                    width="14px"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="info-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                      />
                      <path
                        d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                      />
                    </svg>
                  </span>
                </span>
              </span>
            </div>
            <div
              class="flex flex-row w-full justify-between mt-4"
            >
              <span
                class="text-xl text-grey"
              >
                ardrive.ar-io.dev
              </span>
              <button
                class="text-[12px] text-white whitespace-nowrap flex items-center"
                style="gap: 0;"
              >
                View Details 
                <svg
                  class="lucide lucide-chevron-right"
                  fill="none"
                  height="18px"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="18px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="flex flex-row w-full mt-2 justify-center items-center max-w-[775px]"
          style="row-gap: 4px;"
        >
          <span
            class="flex flex-row justify-center items-center whitespace-nowrap text-sm  text-white"
            style="gap: 5px;"
          >
            <div
              fill="var(--success-green)"
              height="14px"
              width="14px"
            />
             Max. 51 characters
          </span>
          <span
            class="flex flex-row justify-center items-center whitespace-nowrap text-sm  text-white"
            style="gap: 5px;"
          >
            <div
              fill="var(--success-green)"
              height="14px"
              width="14px"
            />
             No special characters or underscores
          </span>
          <span
            class="flex flex-row justify-center items-center whitespace-nowrap text-sm  text-white"
            style="gap: 5px;"
          >
            <div
              fill="var(--success-green)"
              height="14px"
              width="14px"
            />
             Dashes cannot be leading or trailing
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HomeSearch renders available header 1`] = `
<DocumentFragment>
  <div
    class="modal-container relative"
  >
    <div
      class="flex flex-col w-full max-w-[800px] h-[200px] absolute mx-0 top-[240px]"
    >
      <div
        class="flex flex-col w-full h-full"
      >
        <div
          class="flex flex-row min-h-[50px] pb-2 text-2xl font-semibold text-white justify-center items-center"
          data-testid="home-search-available-header"
          style="gap: 0;"
        >
          <span>
            available-domain
          </span>
           is available! 
          <span
            aria-label="check-circle"
            class="anticon anticon-check-circle"
            role="img"
            style="font-size: 20px;"
          >
            <svg
              aria-hidden="true"
              data-icon="check-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
              />
            </svg>
          </span>
        </div>
        <div
          class="flex flex-col w-full rounded-[4px] bg-foreground border-[1px] border-success"
        >
          <div
            class="flex flex-row w-full p-2 pr-[100px] relative gap-2"
          >
            <input
              class="flex w-full pl-4 h-[50px] bg-foreground focus:outline-none placeholder:text-grey text-[14px] text-white text-lg"
              data-testid="domain-search-input"
              placeholder="Search for a name"
              type="text"
              value="available-domain"
            />
            <button
              class="flex flex-row items-center justify-center absolute right-0 top-0 h-full max-w-[65px]"
              data-testid="domain-search-button"
            >
              <svg
                class="lucide lucide-x fill-white text-white"
                fill="none"
                height="18px"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="18px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 6 6 18"
                />
                <path
                  d="m6 6 12 12"
                />
              </svg>
            </button>
          </div>
          <div
            class="flex flex-col w-full p-6 pt-4 border-t-[1px] border-dark-grey"
            data-testid="home-search-child-container"
          >
            <div
              class="flex flew-row w-full justify-between"
            >
              <span
                class="text-grey text-sm"
              >
                <span
                  class="whitespace-nowrap flex items-center gap-2"
                >
                  AVAILABLE 
                  <div
                    class="fill-success"
                    height="14px"
                    width="14px"
                  />
                </span>
              </span>
              <span
                class="text-sm text-white align-center animate-pulse"
              >
                Loading prices...
              </span>
            </div>
            <div
              class="flex flex-row w-full justify-between mt-4"
            >
              <span
                class="text-xl text-white"
              >
                ar://available-domain
              </span>
              <button
                class="py-2 px-3 text-sm bg-primary font-bold rounded-[4px] text-black disabled:opacity-50 disabled:bg-grey"
              >
                Register
              </button>
            </div>
          </div>
        </div>
        <div
          class="flex flex-row w-full mt-2 justify-center items-center max-w-[775px]"
          style="row-gap: 4px;"
        >
          <span
            class="flex flex-row justify-center items-center whitespace-nowrap text-sm  text-white"
            style="gap: 5px;"
          >
            <div
              fill="var(--success-green)"
              height="14px"
              width="14px"
            />
             Max. 51 characters
          </span>
          <span
            class="flex flex-row justify-center items-center whitespace-nowrap text-sm  text-white"
            style="gap: 5px;"
          >
            <div
              fill="var(--success-green)"
              height="14px"
              width="14px"
            />
             No special characters or underscores
          </span>
          <span
            class="flex flex-row justify-center items-center whitespace-nowrap text-sm  text-white"
            style="gap: 5px;"
          >
            <div
              fill="var(--success-green)"
              height="14px"
              width="14px"
            />
             Dashes cannot be leading or trailing
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HomeSearch renders correctly 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <div
      class="flex flex-col w-full max-w-[800px] h-[200px] "
    >
      <div
        class="flex flex-col w-full h-full"
      >
        <div
          class="min-h-[50px]"
          data-testid="home-search-spacer-header"
        />
        <div
          class="flex flex-col w-full rounded-[4px] bg-foreground border-[1px] border-grey"
        >
          <div
            class="flex flex-row w-full p-2 pr-[100px] relative gap-2"
          >
            <input
              class="flex w-full pl-4 h-[50px] bg-foreground focus:outline-none placeholder:text-grey text-[14px] text-white text-lg"
              data-testid="domain-search-input"
              placeholder="Search for a name"
              type="text"
              value=""
            />
            <button
              class="flex flex-row items-center justify-center absolute right-0 top-0 h-full max-w-[65px]"
              data-testid="domain-search-button"
            >
              <span
                class="flex w-full h-full items-center justify-center border-l-[1px] border-dark-grey"
              >
                <div
                  class="fill-white"
                  height="18px"
                  width="18px"
                />
              </span>
            </button>
          </div>
        </div>
        <div
          class="flex flex-row w-full mt-2 justify-center items-center max-w-[775px]"
          style="row-gap: 4px;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HomeSearch renders invalid domain header 1`] = `
<DocumentFragment>
  <div
    class="modal-container relative"
  >
    <div
      class="flex flex-col w-full max-w-[800px] h-[200px] absolute mx-0 top-[240px]"
    >
      <div
        class="flex flex-col w-full h-full"
      >
        <div
          class="flex flex-row min-h-[50px] pb-2 text-xl font-semibold text-grey justify-center items-center"
          data-testid="home-search-invalid-header"
          style=""
        >
          Invalid ArNS domain, dashes cannot be leading or trailing
        </div>
        <div
          class="flex flex-col w-full rounded-[4px] bg-foreground border-[1px] border-grey"
        >
          <div
            class="flex flex-row w-full p-2 pr-[100px] relative gap-2"
          >
            <input
              class="flex w-full pl-4 h-[50px] bg-foreground focus:outline-none placeholder:text-grey text-[14px] text-white text-lg"
              data-testid="domain-search-input"
              placeholder="Search for a name"
              type="text"
              value="ardrive-"
            />
            <button
              class="flex flex-row items-center justify-center absolute right-0 top-0 h-full max-w-[65px]"
              data-testid="domain-search-button"
            >
              <svg
                class="lucide lucide-x fill-white text-white"
                fill="none"
                height="18px"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="18px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 6 6 18"
                />
                <path
                  d="m6 6 12 12"
                />
              </svg>
            </button>
          </div>
          <div
            class="flex flex-col w-full p-6 pt-4 border-t-[1px] border-dark-grey"
            data-testid="home-search-child-container"
          >
            <div
              class="flex flew-row w-full justify-between"
            >
              <span
                class="text-grey text-sm"
              >
                <span
                  class="whitespace-nowrap flex items-center gap-2"
                >
                  AVAILABLE 
                  <div
                    class="fill-success"
                    height="14px"
                    width="14px"
                  />
                </span>
              </span>
            </div>
            <div
              class="flex flex-row w-full justify-between mt-4"
            >
              <span
                class="text-xl text-white"
              >
                ar://ardrive-
              </span>
              <button
                class="py-2 px-3 text-sm bg-primary font-bold rounded-[4px] text-black disabled:opacity-50 disabled:bg-grey"
                disabled=""
              >
                Register
              </button>
            </div>
          </div>
        </div>
        <div
          class="flex flex-row w-full mt-2 justify-center items-center max-w-[775px]"
          style="row-gap: 4px;"
        >
          <span
            class="flex flex-row justify-center items-center whitespace-nowrap text-sm  text-white"
            style="gap: 5px;"
          >
            <div
              fill="var(--success-green)"
              height="14px"
              width="14px"
            />
             Max. 51 characters
          </span>
          <span
            class="flex flex-row justify-center items-center whitespace-nowrap text-sm  text-white"
            style="gap: 5px;"
          >
            <div
              fill="var(--success-green)"
              height="14px"
              width="14px"
            />
             No special characters or underscores
          </span>
          <span
            class="flex flex-row justify-center items-center whitespace-nowrap text-sm  animate-pulse text-grey"
            style="gap: 5px;"
          >
            <div
              fill="var(--text-grey)"
              height="14px"
              width="14px"
            />
             Dashes cannot be leading or trailing
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HomeSearch renders invalid domain header 2`] = `
<DocumentFragment>
  <div
    class="modal-container relative"
  >
    <div
      class="flex flex-col w-full max-w-[800px] h-[200px] absolute mx-0 top-[240px]"
    >
      <div
        class="flex flex-col w-full h-full"
      >
        <div
          class="flex flex-row min-h-[50px] pb-2 text-xl font-semibold text-grey justify-center items-center"
          data-testid="home-search-invalid-header"
          style=""
        >
          Invalid ArNS domain, remove '.'
        </div>
        <div
          class="flex flex-col w-full rounded-[4px] bg-foreground border-[1px] border-grey"
        >
          <div
            class="flex flex-row w-full p-2 pr-[100px] relative gap-2"
          >
            <input
              class="flex w-full pl-4 h-[50px] bg-foreground focus:outline-none placeholder:text-grey text-[14px] text-white text-lg"
              data-testid="domain-search-input"
              placeholder="Search for a name"
              type="text"
              value="ardrive.d"
            />
            <button
              class="flex flex-row items-center justify-center absolute right-0 top-0 h-full max-w-[65px]"
              data-testid="domain-search-button"
            >
              <svg
                class="lucide lucide-x fill-white text-white"
                fill="none"
                height="18px"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="18px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 6 6 18"
                />
                <path
                  d="m6 6 12 12"
                />
              </svg>
            </button>
          </div>
          <div
            class="flex flex-col w-full p-6 pt-4 border-t-[1px] border-dark-grey"
            data-testid="home-search-child-container"
          >
            <div
              class="flex flew-row w-full justify-between"
            >
              <span
                class="text-grey text-sm"
              >
                <span
                  class="whitespace-nowrap flex items-center gap-2"
                >
                  AVAILABLE 
                  <div
                    class="fill-success"
                    height="14px"
                    width="14px"
                  />
                </span>
              </span>
            </div>
            <div
              class="flex flex-row w-full justify-between mt-4"
            >
              <span
                class="text-xl text-white"
              >
                ar://ardrive.d
              </span>
              <button
                class="py-2 px-3 text-sm bg-primary font-bold rounded-[4px] text-black disabled:opacity-50 disabled:bg-grey"
                disabled=""
              >
                Register
              </button>
            </div>
          </div>
        </div>
        <div
          class="flex flex-row w-full mt-2 justify-center items-center max-w-[775px]"
          style="row-gap: 4px;"
        >
          <span
            class="flex flex-row justify-center items-center whitespace-nowrap text-sm  text-white"
            style="gap: 5px;"
          >
            <div
              fill="var(--success-green)"
              height="14px"
              width="14px"
            />
             Max. 51 characters
          </span>
          <span
            class="flex flex-row justify-center items-center whitespace-nowrap text-sm  animate-pulse text-grey"
            style="gap: 5px;"
          >
            <div
              fill="var(--text-grey)"
              height="14px"
              width="14px"
            />
             No special characters or underscores
          </span>
          <span
            class="flex flex-row justify-center items-center whitespace-nowrap text-sm  text-white"
            style="gap: 5px;"
          >
            <div
              fill="var(--success-green)"
              height="14px"
              width="14px"
            />
             Dashes cannot be leading or trailing
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HomeSearch renders invalid domain header 3`] = `
<DocumentFragment>
  <div
    class="modal-container relative"
  >
    <div
      class="flex flex-col w-full max-w-[800px] h-[200px] absolute mx-0 top-[240px]"
    >
      <div
        class="flex flex-col w-full h-full"
      >
        <div
          class="flex flex-row min-h-[50px] pb-2 text-xl font-semibold text-grey justify-center items-center"
          data-testid="home-search-invalid-header"
          style=""
        >
          Invalid ArNS domain, remove '?'
        </div>
        <div
          class="flex flex-col w-full rounded-[4px] bg-foreground border-[1px] border-grey"
        >
          <div
            class="flex flex-row w-full p-2 pr-[100px] relative gap-2"
          >
            <input
              class="flex w-full pl-4 h-[50px] bg-foreground focus:outline-none placeholder:text-grey text-[14px] text-white text-lg"
              data-testid="domain-search-input"
              placeholder="Search for a name"
              type="text"
              value="ard?drive"
            />
            <button
              class="flex flex-row items-center justify-center absolute right-0 top-0 h-full max-w-[65px]"
              data-testid="domain-search-button"
            >
              <svg
                class="lucide lucide-x fill-white text-white"
                fill="none"
                height="18px"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="18px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 6 6 18"
                />
                <path
                  d="m6 6 12 12"
                />
              </svg>
            </button>
          </div>
          <div
            class="flex flex-col w-full p-6 pt-4 border-t-[1px] border-dark-grey"
            data-testid="home-search-child-container"
          >
            <div
              class="flex flew-row w-full justify-between"
            >
              <span
                class="text-grey text-sm"
              >
                <span
                  class="whitespace-nowrap flex items-center gap-2"
                >
                  AVAILABLE 
                  <div
                    class="fill-success"
                    height="14px"
                    width="14px"
                  />
                </span>
              </span>
            </div>
            <div
              class="flex flex-row w-full justify-between mt-4"
            >
              <span
                class="text-xl text-white"
              >
                ar://ard?drive
              </span>
              <button
                class="py-2 px-3 text-sm bg-primary font-bold rounded-[4px] text-black disabled:opacity-50 disabled:bg-grey"
                disabled=""
              >
                Register
              </button>
            </div>
          </div>
        </div>
        <div
          class="flex flex-row w-full mt-2 justify-center items-center max-w-[775px]"
          style="row-gap: 4px;"
        >
          <span
            class="flex flex-row justify-center items-center whitespace-nowrap text-sm  text-white"
            style="gap: 5px;"
          >
            <div
              fill="var(--success-green)"
              height="14px"
              width="14px"
            />
             Max. 51 characters
          </span>
          <span
            class="flex flex-row justify-center items-center whitespace-nowrap text-sm  animate-pulse text-grey"
            style="gap: 5px;"
          >
            <div
              fill="var(--text-grey)"
              height="14px"
              width="14px"
            />
             No special characters or underscores
          </span>
          <span
            class="flex flex-row justify-center items-center whitespace-nowrap text-sm  animate-pulse text-grey"
            style="gap: 5px;"
          >
            <div
              fill="var(--text-grey)"
              height="14px"
              width="14px"
            />
             Dashes cannot be leading or trailing
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HomeSearch renders invalid domain header 4`] = `
<DocumentFragment>
  <div
    class="modal-container relative"
  >
    <div
      class="flex flex-col w-full max-w-[800px] h-[200px] absolute mx-0 top-[240px]"
    >
      <div
        class="flex flex-col w-full h-full"
      >
        <div
          class="flex flex-row min-h-[50px] pb-2 text-xl font-semibold text-grey justify-center items-center"
          data-testid="home-search-invalid-header"
          style=""
        >
          Invalid ArNS domain, remove '_'
        </div>
        <div
          class="flex flex-col w-full rounded-[4px] bg-foreground border-[1px] border-grey"
        >
          <div
            class="flex flex-row w-full p-2 pr-[100px] relative gap-2"
          >
            <input
              class="flex w-full pl-4 h-[50px] bg-foreground focus:outline-none placeholder:text-grey text-[14px] text-white text-lg"
              data-testid="domain-search-input"
              placeholder="Search for a name"
              type="text"
              value="ar_drive"
            />
            <button
              class="flex flex-row items-center justify-center absolute right-0 top-0 h-full max-w-[65px]"
              data-testid="domain-search-button"
            >
              <svg
                class="lucide lucide-x fill-white text-white"
                fill="none"
                height="18px"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="18px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 6 6 18"
                />
                <path
                  d="m6 6 12 12"
                />
              </svg>
            </button>
          </div>
          <div
            class="flex flex-col w-full p-6 pt-4 border-t-[1px] border-dark-grey"
            data-testid="home-search-child-container"
          >
            <div
              class="flex flew-row w-full justify-between"
            >
              <span
                class="text-grey text-sm"
              >
                <span
                  class="whitespace-nowrap flex items-center gap-2"
                >
                  AVAILABLE 
                  <div
                    class="fill-success"
                    height="14px"
                    width="14px"
                  />
                </span>
              </span>
            </div>
            <div
              class="flex flex-row w-full justify-between mt-4"
            >
              <span
                class="text-xl text-white"
              >
                ar://ar_drive
              </span>
              <button
                class="py-2 px-3 text-sm bg-primary font-bold rounded-[4px] text-black disabled:opacity-50 disabled:bg-grey"
                disabled=""
              >
                Register
              </button>
            </div>
          </div>
        </div>
        <div
          class="flex flex-row w-full mt-2 justify-center items-center max-w-[775px]"
          style="row-gap: 4px;"
        >
          <span
            class="flex flex-row justify-center items-center whitespace-nowrap text-sm  text-white"
            style="gap: 5px;"
          >
            <div
              fill="var(--success-green)"
              height="14px"
              width="14px"
            />
             Max. 51 characters
          </span>
          <span
            class="flex flex-row justify-center items-center whitespace-nowrap text-sm  animate-pulse text-grey"
            style="gap: 5px;"
          >
            <div
              fill="var(--text-grey)"
              height="14px"
              width="14px"
            />
             No special characters or underscores
          </span>
          <span
            class="flex flex-row justify-center items-center whitespace-nowrap text-sm  text-white"
            style="gap: 5px;"
          >
            <div
              fill="var(--success-green)"
              height="14px"
              width="14px"
            />
             Dashes cannot be leading or trailing
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HomeSearch renders unavailable header 1`] = `
<DocumentFragment>
  <div
    class="modal-container relative"
  >
    <div
      class="flex flex-col w-full max-w-[800px] h-[200px] absolute mx-0 top-[240px]"
    >
      <div
        class="flex flex-col w-full h-full"
      >
        <div
          class="min-h-[50px]"
          data-testid="home-search-spacer-header"
          style=""
        />
        <div
          class="flex flex-col w-full rounded-[4px] bg-foreground border-[1px] border-error"
        >
          <div
            class="flex flex-row w-full p-2 pr-[100px] relative gap-2"
          >
            <input
              class="flex w-full pl-4 h-[50px] bg-foreground focus:outline-none placeholder:text-grey text-[14px] text-white text-lg"
              data-testid="domain-search-input"
              placeholder="Search for a name"
              type="text"
              value="ardrive"
            />
            <button
              class="flex flex-row items-center justify-center absolute right-0 top-0 h-full max-w-[65px]"
              data-testid="domain-search-button"
            >
              <svg
                class="lucide lucide-x fill-white text-white"
                fill="none"
                height="18px"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="18px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 6 6 18"
                />
                <path
                  d="m6 6 12 12"
                />
              </svg>
            </button>
          </div>
          <div
            class="flex flex-col w-full p-6 pt-4 border-t-[1px] border-dark-grey"
            data-testid="home-search-child-container"
          >
            <div
              class="flex flew-row w-full justify-between"
            >
              <span
                class="text-grey text-sm"
              >
                <span
                  class="whitespace-nowrap flex items-center gap-2"
                >
                  NOT AVAILABLE
                  <span
                    aria-label="info-circle"
                    class="anticon anticon-info-circle fill-grey pointer"
                    height="14px"
                    role="img"
                    width="14px"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="info-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                      />
                      <path
                        d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                      />
                    </svg>
                  </span>
                </span>
              </span>
            </div>
            <div
              class="flex flex-row w-full justify-between mt-4"
            >
              <span
                class="text-xl text-grey"
              >
                ardrive.ar-io.dev
              </span>
              <button
                class="text-[12px] text-white whitespace-nowrap flex items-center"
                style="gap: 0;"
              >
                View Details 
                <svg
                  class="lucide lucide-chevron-right"
                  fill="none"
                  height="18px"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="18px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="flex flex-row w-full mt-2 justify-center items-center max-w-[775px]"
          style="row-gap: 4px;"
        >
          <span
            class="flex flex-row justify-center items-center whitespace-nowrap text-sm  text-white"
            style="gap: 5px;"
          >
            <div
              fill="var(--success-green)"
              height="14px"
              width="14px"
            />
             Max. 51 characters
          </span>
          <span
            class="flex flex-row justify-center items-center whitespace-nowrap text-sm  text-white"
            style="gap: 5px;"
          >
            <div
              fill="var(--success-green)"
              height="14px"
              width="14px"
            />
             No special characters or underscores
          </span>
          <span
            class="flex flex-row justify-center items-center whitespace-nowrap text-sm  text-white"
            style="gap: 5px;"
          >
            <div
              fill="var(--success-green)"
              height="14px"
              width="14px"
            />
             Dashes cannot be leading or trailing
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
